<resources>
    <string name="app_name">Hospital Manager</string>
    <string name="amount_of_money">%1$s $.</string>
    <string name="doctor">Нанять менеджера   </string>
    <string name="hospitals">Бизнес </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount_of_production">%1$d</string>
    <string name="title_activity_managers">ManagersActivity</string>
    <string name="all_people_first">Здоровые</string>
    <string name="sick_people_first">Болеющие</string>
    <string name="sick_people_second"> %1$s</string>
    <string name="days">Дней с начала заражения %1$d</string>
    <string name="all_people_second">%1$s</string>
    <string name="dead_people_first">Умершие </string>
    <string name="dead_people_second">   %1$s </string>
    <string name="ManagerString">Купить  %1$d $.Я крутой менеджер</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="buy">Купить %1$d $</string>
    <string name="workingmanagerbutton">Работает</string>
    <string name="firstUpgrade">Вы заработали %1$s $</string>
    <string name="alertDialogString">Вы заработали %1$s $</string>
    <string name="newGameAlert">Вы уверены что хотите начать новую игру заново</string>
    <string name="yes">Да</string>
    <string name="No">Нет</string>
    <string name="first_string">Частная практика</string>
    <string name="second_string">Сельская клиника</string>
    <string name="third_string">Пункт скорой помощи</string>
    <string name="fourth_string">Мед кафедра</string>
    <string name="fifth_string">Поликлинника</string>
    <string name="sixth_string">Районная больница</string>
    <string name="seventh">Федеральная больница</string>
    <string name="eigth">Спец центр лечения</string>
    <string name="ninth">Центр контроля заболеваний (ЦКЗ)</string>
    <string name="tenth">ВОЗ </string>
    <string name="button_hospital">Больницы</string>
    <string name="button_upgrades">Улучшения </string>
    <string name="button_settings">Настройки</string>

    <string name="name_upgrade_1">Руководить помощниками</string>
    <string name="name_upgrade_2">Составить график\n  приема</string>
    <string name="name_upgrade_3">Нанять фельдшера</string>
    <string name="name_upgrade_4">Назначить куратора</string>
    <string name="name_upgrade_5"> Нанять глав.врача</string>
    <string name="name_upgrade_6">Нанять зав.отделения</string>
    <string name="name_upgrade_7">Обустроить инфекционное\n  отделение</string>
    <string name="name_upgrade_8">Нанять ведущего\n  специалиста</string>
    <string name="name_upgrade_9">Нанять вирусологов</string>
    <string name="name_upgrade_10">Нанять секретаря</string>
    <string name="name_upgrade_11">Выдать помощникам\n  велосипеды</string>
    <string name="name_upgrade_12">Выдавать одноразовые\n  перчатки</string>
    <string name="name_upgrade_13">Расширить автопарк</string>
    <string name="name_upgrade_14">Организовать практику</string>
    <string name="name_upgrade_15"> Организовать вызов\n  врача на-дом</string>
    <string name="name_upgrade_16">Организовать регулярную\n  дезинфекцию</string>
    <string name="name_upgrade_17">Пригласить иностранных\n  специалистов</string>
    <string name="name_upgrade_18">Построить корпус\n  на 1000 человек</string>
    <string name="name_upgrade_19">Выделить средства\n на исследования</string>
    <string name="name_upgrade_20">Установить стандарт\n лечения респираторных заболеваний</string>
    <string name="name_upgrade_21">Выдать наборы\n  противовирусных препаратов</string>
    <string name="name_upgrade_22">Выдать одноразовые\n маски</string>
    <string name="name_upgrade_23">Оборудовать  передвижные\n лаборатории</string>
    <string name="name_upgrade_24">Провести коллоквиум</string>
    <string name="name_upgrade_25">Провести инструктаж\n по выявлению вируса</string>
    <string name="name_upgrade_26">Провести планерку\n по заболевшим</string>
    <string name="name_upgrade_27">Закупить современные\n противовирусные препараты</string>
    <string name="name_upgrade_28"> Построить корпусов\n на 10 000 чел</string>
    <string name="name_upgrade_29">Разработать новый\n  метод лечения респираторных заболеваний</string>
    <string name="name_upgrade_30">Провести дезинфекцию\n  общественного транспорта</string>
    <string name="name_upgrade_31">Выдать машины</string>
    <string name="name_upgrade_32">Выдать пациентам\n антисептик</string>
    <string name="name_upgrade_33">Оборудовать машины\n  спец. сигналом</string>
    <string name="name_upgrade_34">Давить учебных\n  часов</string>
    <string name="name_upgrade_35"> Провести ликбез\n  по гигиене среди населения</string>
    <string name="name_upgrade_36">Провести семинар\n  по инфекционным заболеваниям</string>
    <string name="name_upgrade_37">Применить новый\n  метод лечения вирусов</string>
    <string name="name_upgrade_38">Достроить корпусов\n  на 100 000 чел</string>
    <string name="name_upgrade_39">Изобрести лекарство\n  и прививки от вирусов</string>
    <string name="name_upgrade_40">Распылять лекарство\n  с самолетов</string>
    <string name="name_upgrade_41">Выдать реактивные \n ранцы </string>
    <string name="name_upgrade_42"> Использовать одноразовые\n шприцы</string>
    <string name="name_upgrade_43">Оборудовать машины\n герметичными носилками</string>
    <string name="name_upgrade_44">Повысить стипендии</string>
    <string name="name_upgrade_45">Сократить нагрузку\n на врачей</string>
    <string name="name_upgrade_46">Провести сделать ремонт\n в палатах</string>
    <string name="name_upgrade_47">Закупить новое\n оборудование</string>
    <string name="name_upgrade_48">Построить переходы\n между корпусами</string>
    <string name="name_upgrade_49">Разработать новый\n иммуностимулятор</string>
    <string name="name_upgrade_50">Продвинуть Закон\n о прививках</string>

    <string name="string_on_buy_button_1">нанять помощника %1$s $</string>
    <string name="string_on_buy_button_4"> выпустить курс %1$s $</string>
    <string name="string_on_buy_button_10">Открыть филиал %1$s $</string>
    <string name="build">построить %1$s $</string>
    <string name="string_on_progressbar">%1$d  чел</string>
    <string name="influence_level_1">Автоматическое лечение</string>
    <string name="influence_level_2">Скорость лечения х2</string>
    <string name="influence_level_3">Эффективность лечения х2</string>
    <string name="influence_level_4">Оплата лечения х2</string>
    <string name="button_defeat_win">Начать заново</string>
    <string name="defeat">Поражение</string>
    <string name="win_text_healthy">Здоровых: %1$s</string>
    <string name="win_text_dead">Умерших: %1$s</string>
    <string name="defeat_text">Все население планеты погибло</string>
    <string name="win">Победа</string>
    <string name="first_part_start_again">ВЫ УВЕРЕНЫ,ЧТО ХОТИТЕ</string>
    <string name="second_part_start_again">НАЧАТЬ НОВУЮ ИГРУ</string>

    <string name="textViewAmount">%1$d / %2$d</string>
    <string name="info_developers_button_text">Информация о разработчиках</string>
    <string name="info_designer">Дизайнер:</string>
    <string name="developer">Разработчик :</string>
    <string name="mySurname">Величко Артемий</string>
    <string name="name_designer">Ирина Краузе</string>
    <string name="link_info">https://www.deviantart.com/rkrauze</string>
    <string name="my_vk_link">https://vk.com/id342185334</string>
    <string name="gmail_link">artamonvel@gmail.com</string>
    <string name="company">Компания:</string>
    <string name="name_company">Empty Mind Games</string>
</resources>