<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/start_again_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.527" />

        <Button
            android:id="@+id/button_yes"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/button_yes_no"
            android:text="@string/yes"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_no"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.58" />

        <Button
            android:id="@+id/button_no"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/button_yes_no"
            android:text="@string/No"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toEndOf="@id/button_yes"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.58" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="31dp"
            android:layout_marginTop="52dp"
            android:textSize="19sp"
            android:textColor="@color/dark"
            android:text="@string/first_part_start_again"
            app:layout_constraintEnd_toEndOf="@+id/button_no"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="@+id/button_yes"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:textSize="19sp"
            android:layout_height="31dp"
            android:textColor="@color/dark"
            android:text="@string/second_part_start_again"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>










