<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_main"
        tools:context="hospitalManager.emptymindgames.com.DoctorsActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            style="@style/scrollbar_shape_style"
            android:layoutAnimation="@anim/layout_animation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="15dp"
            android:paddingEnd="25dp"
            android:paddingTop="150dp"
            android:paddingBottom="64dp"
            android:scrollbarSize="10dip"
            android:scrollbarTrackVertical="@android:color/white"
            android:scrollbars="vertical"
            app:layout_constraintTop_toTopOf="@+id/sickPeople_first"
            tools:layout_editor_absoluteX="1dp" />



        <TextView
            android:id="@+id/all_people_first"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/healthy_half"
            android:gravity="center"
            android:text="@string/all_people_first"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintHorizontal_bias="0.33"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/sickPeople_first"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/all_people_second"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/healthy_second"
            android:gravity="center"
            android:text="@string/all_people_second"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/recycler_view"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/sickPeople_second"
            app:layout_constraintTop_toBottomOf="@id/all_people_first"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_default="spread" />


        <TextView
            android:id="@+id/sickPeople_first"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/sick_half"
            android:gravity="center"
            android:text="@string/sick_people_first"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintHorizontal_bias="0.33"
            app:layout_constraintLeft_toRightOf="@id/all_people_first"
            app:layout_constraintRight_toLeftOf="@id/dead_people_first"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />


        <TextView
            android:id="@+id/sickPeople_second"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/sick_second_half"
            android:gravity="center"
            android:text="@string/sick_people_second"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/recycler_view"
            app:layout_constraintLeft_toRightOf="@id/all_people_second"
            app:layout_constraintRight_toLeftOf="@id/dead_people_second"
            app:layout_constraintTop_toBottomOf="@id/all_people_first"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_default="spread" />

        <TextView
            android:id="@+id/dead_people_first"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/dead_half"
            android:gravity="center"
            android:scaleType="centerCrop"
            android:text="@string/dead_people_first"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sickPeople_first"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintWidth_default="spread" />


        <TextView
            android:id="@+id/dead_people_second"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/dead_second_half"
            android:gravity="center"
            android:scaleType="centerCrop"
            android:text="@string/dead_people_first"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/recycler_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sickPeople_second"
            app:layout_constraintTop_toBottomOf="@id/dead_people_first"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_default="spread" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/money"
            android:gravity="center"
            android:text="@string/amount_of_money"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="@id/recycler_view"
            app:layout_constraintRight_toLeftOf="@id/days"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dead_people_second"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/days"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/days"
            android:gravity="center"
            android:text="@string/days"
            android:textColor="@color/dark"
            app:layout_constraintBottom_toTopOf="@id/recycler_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintStart_toEndOf="@id/amount"
            app:layout_constraintTop_toBottomOf="@+id/sickPeople_second"
            app:layout_constraintVertical_bias="0.001" />


        <ImageView
            android:id="@+id/background_buttons"
            android:layout_width="600dp"
            android:layout_height="60dp"
            android:background="@drawable/background_buttons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/button_doctor"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/image_hospital"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/hospital_icon"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/button_hospital"
            app:layout_constraintStart_toStartOf="@id/button_hospital"
            app:layout_constraintTop_toTopOf="@+id/background_buttons" />

        <TextView
            android:id="@+id/button_hospital"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_doctor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/background_buttons" />


        <TextView
            android:id="@+id/text_view_hospital"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/button_hospital"
            android:textColor="@color/dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_view_doctor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_hospital" />


        <TextView
            android:id="@+id/image_doctor"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/upgrade_icon"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/button_doctor"
            app:layout_constraintStart_toStartOf="@id/button_doctor"
            app:layout_constraintTop_toTopOf="@+id/background_buttons" />

        <TextView
            android:id="@+id/button_doctor"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_settings"
            app:layout_constraintStart_toEndOf="@id/button_hospital"
            app:layout_constraintTop_toTopOf="@+id/background_buttons" />

        <TextView
            android:id="@+id/text_view_doctor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/button_upgrades"
            android:textColor="@color/dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_view_settings"
            app:layout_constraintStart_toEndOf="@id/text_view_hospital"
            app:layout_constraintTop_toTopOf="@id/image_doctor" />

        <TextView
            android:id="@+id/image_settings"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/settings_icon"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/button_settings"
            app:layout_constraintStart_toStartOf="@id/button_settings"
            app:layout_constraintTop_toTopOf="@+id/background_buttons" />

        <TextView
            android:id="@+id/button_settings"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_doctor"
            app:layout_constraintTop_toTopOf="@+id/background_buttons" />

        <TextView
            android:id="@+id/text_view_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/button_settings"
            android:textColor="@color/dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_view_doctor"
            app:layout_constraintTop_toTopOf="@id/background_buttons" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>