<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/firstline"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@drawable/line_win"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.03"
                tools:layout_editor_absoluteX="0dp" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/win"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstline"
                app:layout_constraintVertical_bias="0.249" />

            <TextView
                android:id="@+id/textView_win"
                android:layout_width="400dp"
                android:layout_height="120dp"
                android:gravity="center"
                android:text="@string/win"
                android:textColor="@color/colorWhite"
                android:textSize="70sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image"
                app:layout_constraintVertical_bias="0.0" />


            <TextView
                android:id="@+id/textView_healthy"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:text="@string/win_text_healthy"
                android:textColor="@color/colorWhite"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/start_again"
                app:layout_constraintTop_toBottomOf="@+id/textView_win"
                app:layout_constraintVertical_bias="0.179" />

            <TextView
                android:id="@+id/textView_dead"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:text="@string/win_text_dead"
                android:textColor="@color/colorWhite"
                android:textSize="19sp"
                app:layout_constraintBottom_toTopOf="@+id/start_again"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/start_again"
                app:layout_constraintTop_toBottomOf="@+id/textView_healthy"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/start_again"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/button_win_defeat"
                android:text="@string/button_defeat_win"
                android:textColor="@color/colorWhite"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_healthy"
                app:layout_constraintVertical_bias="0.411" />

            <ImageView
                android:id="@+id/secondline"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@drawable/line_win"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.97"
                tools:layout_editor_absoluteX="118dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>